[psb120] (CI) Fixed stage name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build-job:
     - flutter build web
 
 deploy-job:
-  stage: production
+  stage: deploy
   dependencies:
     - build-job
   script:
