--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,44 +1,40 @@
-#default:
-#  tags:
-#    - DRP
-#
-#build-job:
-#  stage: build
-#  rules:
-#    - if: '$CI_COMMIT_REF_NAME == "master"'
-#    - when: manual
-#  artifacts:
-#    untracked: true
-#  script:
-#    - flutter build web
-#
-#deploy-job:
-#  stage: deploy
-#  dependencies:
-#    - build-job
-#  script:
-#    - aws s3 sync build/web s3://drp-group-13.com
-#    - aws cloudfront create-invalidation --distribution-id E22LUVITD97BOO --paths '/*'
-
 build-job:
   stage: build
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "master"'
+    - when: manual
+  artifacts:
+    untracked: true
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
+    - flutter build web
 
-test-job1:
-  stage: test
-  script:
-    - echo "This job tests something"
-
-test-job2:
-  stage: test
-  script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
-
-deploy-prod:
+deploy-job:
   stage: deploy
+  dependencies:
+    - build-job
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+    - aws s3 sync build/web s3://drp-group-13.com
+    - aws cloudfront create-invalidation --distribution-id E22LUVITD97BOO --paths '/*'
+
+#build-job:
+#  stage: build
+#  script:
+#    - echo "Hello, $GITLAB_USER_LOGIN!"
+#
+#test-job1:
+#  stage: test
+#  script:
+#    - echo "This job tests something"
+#
+#test-job2:
+#  stage: test
+#  script:
+#    - echo "This job tests something, but takes more time than test-job1."
+#    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+#    - echo "which simulates a test that runs 20 seconds longer than test-job1"
+#    - sleep 20
+#
+#deploy-prod:
+#  stage: deploy
+#  script:
+#    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
