[psb120] (CI) Added Docker image for deploy stage to resolve dependency issues

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ build-job:
     - flutter build web
 
 deploy-job:
+  image: amazon/aws-cli:latest
   stage: deploy
   dependencies:
     - build-job
