--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,32 +15,5 @@ deploy-job:
   dependencies:
     - build-job
   script:
-#    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-#    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-#    - aws configure set default.region $AWS_DEFAULT_REGION
-#    - aws configure set output "text"
-    - aws s3 sync build/web s3://drp-group-13.com
+    - aws s3 sync build/web s3://rivia-frotnend.com
     - aws cloudfront create-invalidation --distribution-id E22LUVITD97BOO --paths '/*'
-
-#build-job:
-#  stage: build
-#  script:
-#    - echo "Hello, $GITLAB_USER_LOGIN!"
-#
-#test-job1:
-#  stage: test
-#  script:
-#    - echo "This job tests something"
-#
-#test-job2:
-#  stage: test
-#  script:
-#    - echo "This job tests something, but takes more time than test-job1."
-#    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-#    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-#    - sleep 20
-#
-#deploy-prod:
-#  stage: deploy
-#  script:
-#    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
