--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "clicker",
-    "short_name": "clicker",
+    "name": "rivia",
+    "short_name": "rivia",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
