Fixed s3 deployment bug

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,5 @@ deploy-job:
   dependencies:
     - build-job
   script:
-    - aws s3 sync build/web s3://rivia-frotnend
+    - aws s3 sync build/web s3://rivia-frotnend/
     - aws cloudfront create-invalidation --distribution-id E22LUVITD97BOO --paths '/*'
