--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,15 +12,9 @@ build-job:
 test-job:
   image: cirrusci/flutter:stable
   stage: test
-  dependencies:
-    - build-job
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == "master"'
-    - when: manual
-  artifacts:
-    untracked: true
   script:
-    flutter test test/widget_test.dart 
+    flutter pub get
+    flutter test
 
 deploy-job:
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
