--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ test-job:
   image: cirrusci/flutter:stable
   stage: test
   script:
-    flutter pub get
-    flutter test
+    - flutter pub get
+    - flutter test
 
 deploy-job:
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
