--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test-job:
   stage: test
   script:
     - flutter pub get
-    - flutter test
+    - flutter test --platform chrome
 
 deploy-job:
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
