--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ test-job:
   image: cirrusci/flutter:stable
   stage: test
   script:
+    - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    - apt -y install ./google-chrome-stable_current_amd64.deb
     - flutter pub get
     - flutter test --platform chrome
 
