--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test-job:
   stage: test
   script:
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-    - apt -y install ./google-chrome-stable_current_amd64.deb
+    - apt -y -f install ./google-chrome-stable_current_amd64.deb
     - flutter pub get
     - flutter test --platform chrome
 
