--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   crypt: ^4.2.1
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
+  pie_chart: ^5.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
