--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
   pie_chart: ^5.3.1
+  multiselect: ^0.0.4
+  multi_select_flutter: ^4.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
